--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="google-site-verification" content="kRNVojAcGNYzxvxbqMIGJ_vNC_gpQd7NRZMaSRLTM1w" />
 <title>index.html</title>
 </head>
 <body>
